--- a/Loc.DAL/App.config
+++ b/Loc.DAL/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <connectionStrings>
+      <add name ="Conexao" connectionString="Data Source=PC_MENDES\SQLEXPRESS;Initial Catalog=BDLOCADORA;Integrated Security=True"
+           providerName="System.Data.SqlClient"/>
+    </connectionStrings>
 </configuration>
